# Sistem-Manajemen-Rental-PlayStation

./: CMakeLists.txt  CONTRIBUTING.md  INSTALLTION.md  LICENSE  README.md  sample_database.sql
assets/: style.qss
include/: DatabaseManager.h  MainWindow.h
src/: DatabaseManager.cpp  MainWindow.cpp  main.cpp
